Increased width of media query to set navigation floated right to prevent logo overlap.

--- a/client/packages/component-header/header.import.less
+++ b/client/packages/component-header/header.import.less
@@ -139,7 +139,7 @@ body.fixedHeader header#menu{
         div.brand-small{
             .transform(translate(0px,0px));
         }
-        @media (max-width:1160px){
+        @media (max-width:1200px){
             nav.mainNav > ul{
                 display: block;
                 float: right;
